navbar z-index issue solved

--- a/css/main.css
+++ b/css/main.css
@@ -1463,7 +1463,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 /* nav-wrap */
 .s-header__nav-wrap {
-    z-index: 1;
+    z-index: 100;
     width: 100%;
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
